--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,21 +1,1 @@
-@import "abstracts/functions";
-@import "abstracts/mixins";
-@import "abstracts/variables";
-
-@import "base/animations";
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
-
-@import "components/button";
-@import "components/card";
-@import "components/highlight";
-@import "components/liner";
-@import "components/swiper";
-
-@import "layout/header";
-@import "layout/navigation";
-@import "layout/main";
-@import "layout/aside";
-
-@import "pages/home";
+@import "pages/index";
