--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -176,6 +176,84 @@ body {
     padding: 8px 16px;
   }
 }
+
+.about{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 50%;
+
+  .list{
+    width: 80%;
+    margin: 0 auto;
+    p{
+      padding: 6px 2px;
+    }
+
+    ul{
+      padding: 0 20px;
+    }
+  }
+}
+
+.learn{
+  display: flex;
+  justify-content: space-between;
+
+  .img{
+    width: 50%;
+    img{
+      width: 100%;
+    }
+  }
+  .more{
+    width: 50%;
+    display: flex;
+    padding: 0px 5%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 2rem;
+
+    p{
+      color: #1e1e1e;
+      font-size: 22px;
+      font-weight: 100;
+    }
+
+    h2{
+      width: 480px;
+      font-size: 44px;
+      font-weight: 400;
+    }
+
+    button{
+      width: 140px;
+      height: 40px;
+      background-color: white;
+      border: 2px solid #7823dc;
+      font-size: 16px;
+
+      &:hover{
+          transition: all ease-in-out 0.3s;
+          background-color: #7823dc;
+          color: white;
+      }
+    }
+  }
+}
+
+.section_container{
+  width: 50%;
+}
+
+.section_img{
+  width: 100%;
+  height: calc(100vh - 60px);
+  object-fit: cover;
+}
+
+
 .cta {
   background-color: #323232;
   display: flex;
@@ -357,7 +435,7 @@ footer {
 
   @media (max-width: 480px) {
     .container_footer {
-      width: 95%;
+      width: 98%;
       padding: 15px;
     }
 
