--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -27,8 +27,9 @@
             margin: 1rem;
             .contact_title{
                font-size: 20px;
-               color:#7823dc;
-               font-weight: 600;
+               color:#47546e;
+               font-weight: 900;
+               letter-spacing: 5px;
             }
             p{
                margin: 5px;
