--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -172,6 +172,31 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
+ .button{
+  position: absolute;
+  top: 60%;
+  left: 40%;
+  color: white;
+  font-size: 2vw;
+  font-weight: bold;
+  text-align: end;
+  padding: 10px;
+  width: 150px;
+  background-color: gray;
+  border: 2px solid green;
+  height: 40px;
+  button{
+    width: 142px;
+    height: 32px;
+    background-color: #383434;
+    color: white;
+    transform: translate(-6%, -25%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+ }
+
 @media (max-width: 600px) {
   .hero-text {
     font-size: 4vw;
